# hume_social

./: .env.example  .pylintrc  CONTRIBUTING.md  README.md  brainstorm.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: hugo.yaml  pylint.yml
diagrams/: README.md  architecture_overview.md  content_validation_flow.md  database_relationships.md  user_progression_system.md
docs/: README.md  beginner.md  expert.md  intermediate.md
docs-site/: README.md  config.toml  hugo.toml
docs-site/content/: _index.md
docs-site/content/diagrams/: _index.md  architecture-overview.md  content-validation-flow.md  database-relationships.md  user-progression-system.md
docs-site/content/docs/: _index.md  beginner.md  expert.md  intermediate.md
docs-site/layouts/_markup/: render-link.html
docs-site/public/: index.html  index.xml  sitemap.xml
docs-site/public/categories/: index.html  index.xml
docs/reference/: README.md  feed.md  moderation.md  sponsorship.md  tags.md  templates.md  theses.md  users.md
requirements/: base.txt  local.txt  prod.txt
src/: pytest.ini
src/config/: urls.py  wsgi.py
templates/: index.html
templates/partials/: _cookie_banner.html  _home_button.html
templates/registration/: login.html
templates/theses/: _thesis_cards.html  thesis_detail.html  thesis_form.html  thesis_list.html  thesis_review.html
templates/users/: account_deleted.html  contact_requests.html  delete_account_confirm.html  my_profile.html  sponsorship_requests.html  user_detail.html  user_list.html
tests/: test_theses.py  test_users.py
(+87 files in other folders)
